        [WK2] XMLHttpRequest upload events don't work with NetworkProcess         https://bugs.webkit.org/show_bug.cgi?id=113887

Reviewed by Brady Eidson.

        Just forward didSendData client call to WebProcess.

        * NetworkProcess/NetworkResourceLoader.cpp:
        (WebKit::NetworkResourceLoader::didSendData):
        (WebKit::NetworkResourceLoader::didCancelAuthenticationChallenge): Tweaked a comment.
        * WebProcess/Network/WebResourceLoader.cpp:
        (WebKit::WebResourceLoader::didSendData):
        * WebProcess/Network/WebResourceLoader.h:
        * WebProcess/Network/WebResourceLoader.messages.in:



Canonical link: https://commits.webkit.org/132236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@147568 268f45cc-cd09-0410-ab3c-d52691b4dbfc