Source/WebKit2/WebProcess/Network/WebResourceLoader.h
@@ -75,6 +75,7 @@ private:
     void cancelResourceLoader();
 
     void willSendRequest(const WebCore::ResourceRequest&, const WebCore::ResourceResponse& redirectResponse);
+    void didSendData(uint64_t bytesSent, uint64_t totalBytesToBeSent);
     void didReceiveResponseWithCertificateInfo(const WebCore::ResourceResponse&, const PlatformCertificateInfo&);
     void didReceiveData(const CoreIPC::DataReference&, int64_t encodedDataLength);
     void didFinishResourceLoad(double finishTime);
